--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 MS_CLIENT_ID=d8d7bf4f-3c79-4b8a-8921-b847d1abc8e0
 MS_CLIENT_SECRET=amb8Q~HoioySec2UN2_y~jRdMsoTJu3Y-DNrucdQ
 MS_TENANT_ID=52c10a99-da19-4c51-8468-387c00fdd824
+GEMINI_API_KEY=AIzaSyAqo7sYpACIxeKorsaH_sNz6GGhVKw2_Kk
